@@ -1,13 +1,13 @@
 import sys, os, xbmc, xbmcaddon
 
 # plugin constants
-__version__			= "0.2.2"
+__version__			= "0.2.3"
 __plugin__			= "OneDDL.com-" + __version__
 __author__			= "pgoeri"
 __url__				= "http://pgoeri-xbmc-plugins.googlecode.com"
 __svn_url__			= "http://pgoeri-xbmc-plugins.googlecode.com/svn/trunk/plugin.download.oneddl/"
-__XBMC_Revision__	= "22ad8e4ddf844bb82fa2c467818d2d797ca36707" # 22-12-2011
-__date__			= "13-02-2012"
+__XBMC_Revision__	= "ec33f1f05a364d6dc69504134158cab31b970f29" # 03-04-2012
+__date__			= "06-04-2012"
 
 __addon__			= xbmcaddon.Addon(id='plugin.download.oneddl')
 __language__		= __addon__.getLocalizedString
